--- a/ApacheGuacamoleIMEswitch/Properties/Resources.resx
+++ b/ApacheGuacamoleIMEswitch/Properties/Resources.resx
@@ -121,7 +121,10 @@
   <data name="Guacamole-icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\Guacamole-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="2024-03-26 09_16_48-" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="rdp" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\rdp.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_2024_03_26_09_16_48_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\2024-03-26 09_16_48-.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
